--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -33,7 +33,7 @@
         </ng-container>
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -189,7 +189,7 @@
       <table mat-table [dataSource]="recordShipment" [trackBy]="getTrackBy">
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -348,7 +348,7 @@
 
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -513,7 +513,7 @@
         </ng-container>
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60;"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -666,7 +666,7 @@
 
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -825,7 +825,7 @@
 
 
         <ng-container matColumnDef="elect">
-          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
           <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
         </ng-container>
 
@@ -988,7 +988,7 @@
 
 
           <ng-container matColumnDef="elect">
-            <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Кли...</th>
+            <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Кр. Клиент</th>
             <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
           </ng-container>
 
