--- a/WebUI/ClientApp/src/app/admin/admin.component.sass
+++ b/WebUI/ClientApp/src/app/admin/admin.component.sass
@@ -5,15 +5,23 @@
     margin-left: auto
     color: #F17373
     font-size: 18px
-    padding: 23px 40px
-    background: rgba(244, 148, 145, 0.05)
+    padding: 35px 40px
+    height: 130px !important
+    background-color: #f1fbfe
     i
         display: inline-block
         margin-left: 60px
-        background: rgba(255, 224, 224, 0.2)
+        background-color: #E2F4FF
         padding: 15px
         border-radius: 99px
         cursor: pointer
 
 .mat-toolbar-row, .mat-toolbar-single-row
     padding-right: 0px
+
+mat-toolbar
+    height: 130px !important
+    background-color: #E2F4FF !important
+
+nav a.active
+    background-color: #d6f2fa !important
