--- a/WebUI/ClientApp/src/app/сontroler/controler.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="mat-elevation-z2">
   <div class="logo">
-    Мир Суши
+    <img height="120" width="120" src="../../Icon/logo.jpg" />
   </div>
   <nav>
     <ul>
