--- a/WebUI/ClientApp/src/app/сontroler/controler.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.sass
@@ -5,9 +5,9 @@
 .logout
     margin-left: auto
     color: #4771A1
-    font-size: 18px
-    padding: 23px 40px
-    background-color: #F7FCFF
+    padding: 35px 40px
+    height: 130px !important
+    background-color: #f1fbfe
     i
         display: inline-block
         margin-left: 60px
@@ -17,3 +17,10 @@
         cursor: pointer
 .mat-toolbar-row, .mat-toolbar-single-row
     padding-right: 0px
+
+mat-toolbar
+    height: 130px !important
+    background-color: #E2F4FF !important
+
+nav a.active
+    background-color: #d6f2fa !important
