--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -120,8 +120,19 @@ th
         border-radius: 99px
         border: 1px solid #E9F3FF
         margin-bottom: 10px
+
+.blockCalendar
+    align-items: center
+    display: flex
+    position: absolute
+    right: 10px
+    z-index: 10
+    background-color: white
     .calendar
         width: 300px
-        position: absolute
-        right: 10px
-        z-index: 10
+    .btnSort
+        width: 150px
+        border-radius: 20px
+        border: 1px solid #d4f3ff
+    .btnSort:focus 
+        background-color: #f2fbff
