--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/correction-response/correction-response.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/correction-response/correction-response.component.html
@@ -8,9 +8,9 @@
       <tr>
         <th colspan="1"></th>
         <th colspan="10">Дата</th>
-        <th colspan="10">Коментарий котролера</th>
+        <th colspan="10">Комментарий контролера</th>
         <th colspan="3">Продолжительность</th>
-        <th colspan="10">Коментарий</th>
+        <th colspan="10">Комментарий</th>
         <th colspan="2"></th>
       </tr>
     </thead>
@@ -33,8 +33,8 @@
     <thead>
       <tr>
         <th colspan="1"></th>
-        <th colspan="10">Коментарий котролера</th>
-        <th colspan="10">Коментарий</th>
+        <th colspan="10">Комментарий контролера</th>
+        <th colspan="10">Комментарий</th>
         <th colspan="2"></th>
       </tr>
     </thead>
@@ -55,8 +55,8 @@
     <thead>
       <tr>
         <th colspan="1"></th>
-        <th colspan="10">Коментарий котролера</th>
-        <th colspan="10">Коментарий</th>
+        <th colspan="10">Комментарий котролера</th>
+        <th colspan="10">Комментарий</th>
         <th colspan="2"></th>
       </tr>
     </thead>
