--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -58,6 +58,7 @@ th
 
 .mat-card
     padding: 0px
+    width: 135% !important
     padding-bottom: 20px
     .archiv
         width: 130px
@@ -69,7 +70,7 @@ th
         color: #4d73a4
         font-weight: bold
         font-size: 20px
-        margin-top: 20px  
+        margin-top: 20px
 
 .card-title
     padding: 40px 10px
@@ -116,7 +117,6 @@ th
 
 .filter
     margin: 0 20px
-    text-align: right
     input, select
         display: inline-block 
         width: 365px
@@ -136,4 +136,3 @@ th
     select
         width: 245px
         margin-right: 20px
-
