--- a/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.html
@@ -40,7 +40,7 @@
 
       <ng-container matColumnDef="countCall">
         <th colspan="2" mat-header-cell *matHeaderCellDef>Звонки</th>
-        <td colspan="2" mat-cell *matCellDef="let element">{{element.clientAccept.length}} </td>
+        <td colspan="2" mat-cell *matCellDef="let element" (click)="goToCall(element.clientAccept)">{{element.clientAccept.length}} </td>
       </ng-container>
 
       <ng-container matColumnDef="planRM">
