--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -28,75 +28,73 @@
     </div>
   </div>
   <div class="bodyAll">
-    <div class="manager" *ngFor="let acceptManager of acceptManagers">
-      <div *ngIf="acceptManager.callsDate.length != 0"  (dblclick)="hidenTable($event)">
-      <p class="dialog-section-title">
-        {{acceptManager.login}} "{{acceptManager.phone}}"
-      </p>
-      <table id="ID{{acceptManager.id}}" mat-table [dataSource]="acceptManager.callsDate" >
 
-        <ng-container matColumnDef="status">
-          <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
-        </ng-container>
 
-        <ng-container matColumnDef="statusCall">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
-          <td colspan="4" mat-cell *matCellDef="let element"><span *ngIf="element.contactType != 50"> {{element.contactType == 40 ? "Подтверждён" : "Не подтвержден"}}</span></td>
-        </ng-container>
+    <mat-paginator [pageSizeOptions]="[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]" showFirstLastButtons></mat-paginator>
+    <mat-table mat-table [dataSource]="dataSource" matSort>
 
-        <ng-container matColumnDef="direction">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
-          <td colspan="4" mat-cell *matCellDef="let element">{{element.direction}} </td>
-        </ng-container>
+      <ng-container matColumnDef="status">
+        <th colspan="1" mat-header-cell *matHeaderCellDef></th>
+        <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+      </ng-container>
 
-        <ng-container matColumnDef="answer">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Отвечен</th>
-          <td colspan="4" mat-cell *matCellDef="let element">{{element.durations == 0 ? "Нет" : "Да"}} </td>
-        </ng-container>
+      <ng-container matColumnDef="statusCall">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
+        <td colspan="4" mat-cell *matCellDef="let element"><span *ngIf="element.contactType != 50"> {{element.contactType == 40 ? "Подтверждён" : "Не подтвержден"}}</span></td>
+      </ng-container>
 
-        <ng-container matColumnDef="title">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Название</th>
-          <td colspan="4" mat-cell *matCellDef="let element">{{element.titleClient}} </td>
-        </ng-container>
+      <ng-container matColumnDef="direction">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.direction}} </td>
+      </ng-container>
 
-        <ng-container matColumnDef="phone">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Номер тел</th>
-          <td colspan="4" mat-cell *matCellDef="let element">{{element.phone}}</td>
-        </ng-container>
+      <ng-container matColumnDef="answer">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Отвечен</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.durations == 0 ? "Нет" : "Да"}} </td>
+      </ng-container>
 
-        <ng-container matColumnDef="duration">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Продолжи..</th>
-          <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{element.durations}} Сек</td>
-        </ng-container>
+      <ng-container matColumnDef="title">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Название</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.titleClient}} </td>
+      </ng-container>
 
-        <ng-container matColumnDef="date">
-          <th colspan="4" mat-header-cell *matHeaderCellDef>Дата</th>
-          <td colspan="4" mat-cell *matCellDef="let element">{{element.date}}</td>
-        </ng-container>
+      <ng-container matColumnDef="phone">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Номер тел</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.phone}}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="comentCon">
-          <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
-          <td colspan="14" mat-cell *matCellDef="let element"><textarea *ngIf="element.contactType != 50" style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br />
+      <ng-container matColumnDef="duration">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Продолжи..</th>
+        <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{element.durations}} Сек</td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Дата</th>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.date}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="comentCon">
+        <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
+        <td colspan="14" mat-cell *matCellDef="let element">
+          <textarea *ngIf="element.contactType != 50" style="width:250px;height:60px;">{{element.callsComments?.comment}}</textarea><br />
           <button *ngIf="element.contactType != 50" (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button>
           <button *ngIf="element.contactType != 50" (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Исправлено</button>
-          </td>
-        </ng-container>
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="comentCli">
-          <th colspan="7" mat-header-cell *matHeaderCellDef>Комментарий менеджера</th>
-          <td colspan="7" mat-cell *matCellDef="let element">{{element.callsComments?.managerComment}}</td>
-        </ng-container>
+      <ng-container matColumnDef="comentCli">
+        <th colspan="7" mat-header-cell *matHeaderCellDef>Комментарий менеджера</th>
+        <td colspan="7" mat-cell *matCellDef="let element">{{element.callsComments?.managerComment}}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="refAudio">
-          <th colspan="14" mat-header-cell *matHeaderCellDef>Аудио запись</th>
-          <td colspan="14" mat-cell *matCellDef="let element"><audio style="height:20px" controls preload="none" src="{{element.referenceAudioVoice}}"></audio></td>
-        </ng-container>
+      <ng-container matColumnDef="refAudio">
+        <th colspan="14" mat-header-cell *matHeaderCellDef>Аудио запись</th>
+        <td colspan="14" mat-cell *matCellDef="let element"><audio style="height:20px" controls preload="none" src="{{element.referenceAudioVoice}}"></audio></td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
-      </table>
-    </div>
-    </div>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
+    </mat-table>
+    <mat-paginator *ngIf="cientAccept.length != 0" [pageSizeOptions]="[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]" showFirstLastButtons></mat-paginator>
   </div>
 </mat-card>
