--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -10,9 +10,13 @@
       <option [ngValue]=1>Исходящие</option>
       <option [ngValue]=2>Входящие</option>
     </select>
+    <select [(ngModel)]="selectedManager" (ngModelChange)="changeManager()">
+      <option selected [ngValue]=0>Все менеджера</option>
+      <option *ngFor="let elm of managers" [ngValue]=elm.id>{{elm.login}}</option>
+    </select>
     <button (click)="hiddenCalendar()">{{btnDate}}</button>
     <div [hidden]="calendarHidden" class="blockCalendar">
-      <div class="calendar" >
+      <div class="calendar">
         <igx-calendar (onSelection)="verifyRange($event)" selection="range"></igx-calendar>
       </div>
       <div class="sortbloc">
@@ -95,6 +99,5 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
     </mat-table>
-    <mat-paginator *ngIf="cientAccept.length != 0" [pageSizeOptions]="[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]" showFirstLastButtons></mat-paginator>
   </div>
 </mat-card>
