--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -103,7 +103,7 @@
           </thead>
           <tbody>
             <tr *ngIf="Managerid.id == Managerid.workgroup.escortManagerId">
-              <td>{{fullPrecentEC}}%</td>
+              <td>{{fullPrecentEC.toFixed()}}%</td>
               <td colspan="2">Звонки развития</td>
               <td>{{performanceChartMC.numberPlan_DevelopmentCalls}}</td>
               <td>{{performanceChartMC.shiftPlan_DevelopmentCalls}}</td>
@@ -119,7 +119,7 @@
               <th colspan="12">Региональный менеджер</th>
             </tr>
             <tr *ngIf="Managerid.id == Managerid.workgroup.regionalManagerId">
-              <td rowspan="3">{{fullPrecentRM}}%</td>
+              <td rowspan="3">{{fullPrecentRM.toFixed()}}%</td>
               <td colspan="2">Встречи и командировки развития</td>
               <td>{{performanceChartRM.numberPlan_DevelopmentCalls}}</td>
               <td>{{performanceChartRM.shiftPlan_DevelopmentCalls}}</td>
