пофикшен баг с не отправкой команды от менеджера что план испрален

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -30,7 +30,7 @@
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
         </ng-container>
 
         <ng-container matColumnDef="elect">
@@ -260,7 +260,7 @@
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
         </ng-container>
 
         <ng-container matColumnDef="elect">
@@ -495,7 +495,7 @@
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
         </ng-container>
 
         <ng-container matColumnDef="title">
@@ -726,7 +726,7 @@
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
         </ng-container>
 
         <ng-container matColumnDef="title">
@@ -952,7 +952,7 @@
 
             <ng-container matColumnDef="status">
               <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-              <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+              <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
             </ng-container>
 
             <ng-container matColumnDef="elect">
@@ -1189,7 +1189,7 @@
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
         </ng-container>
 
         <ng-container matColumnDef="title">
@@ -1420,7 +1420,7 @@
 
         <ng-container matColumnDef="status">
           <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+          <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
         </ng-container>
 
         <ng-container matColumnDef="title">
@@ -1654,7 +1654,7 @@
 
           <ng-container matColumnDef="status">
             <th colspan="1" mat-header-cell *matHeaderCellDef></th>
-            <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)"></td>
+            <td colspan="1" mat-cell *matCellDef="let element" [style.background]="setBagroundStatus(element)" (click)="OpenCorrectionResponse(element.id, element.title)"></td>
           </ng-container>
 
           <ng-container matColumnDef="title">
