--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
@@ -10,7 +10,7 @@
     <select [(ngModel)]="dateCollection" (ngModelChange)="toFormatDate(dateCollection)">
       <option *ngFor="let dateCollection of dateCollections">{{dateCollection}}</option>
     </select>
-    <select [(ngModel)]="numberWeek">
+    <select [(ngModel)]="numberWeek" (change)="weekChnege()">
       <option [ngValue]=1>Первая неделя</option>
       <option [ngValue]=2>Вторая неделя</option>
       <option [ngValue]=3>Третья неделя</option>
@@ -29,12 +29,12 @@
         <span>
           <h5> МС ⟹ {{workgroup.escortManagerName}}</h5>
         </span><br />
-        <span>
-          Начало работы: {{getStartWorkManager(workgroup.escortManagerId, workgroup.workgroupId)}}
-        </span><br />
-        <span>
-          Конец работы: {{getEndWorkManager(workgroup.escortManagerId, workgroup.workgroupId)}}
-        </span>
+               <span>
+                 Начало работы: {{getStartWorkManager(workgroup.escortManagerId, workgroup.workgroupId)}}
+               </span><br />
+                      <span>
+                        Конец работы: {{getEndWorkManager(workgroup.escortManagerId, workgroup.workgroupId)}}
+                      </span>
       </div>
       <table>
         <thead>
@@ -43,7 +43,6 @@
             <th>{{btnDate}}</th>
             <th>{{getPeriudWeek()}}</th>
             <th>{{dateCollection}}</th>
-            <th>Всего</th>
           </tr>
         </thead>
         <tbody>
@@ -52,70 +51,60 @@
             <td>{{getToDayAllCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekAllCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthAllCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllAllCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Более 2,5 мин</td>
             <td>{{getToDayMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllMore2and5Call(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Менее 2.5 мин, более 10 сек</td>
             <td>{{getToDaySmaller2and5AndMore10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekSmaller2and5AndMore10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthSmaller2and5AndMore10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllSmaller2and5AndMore10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Менее 10 сек</td>
             <td>{{getToDaySmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekSmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthSmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllSmaller10SCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Звонки развития</td>
             <td>{{getToDayDevelopmentCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekDevelopmentCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthDevelopmentCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllDevelopmentCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Звонки коллегам</td>
             <td>{{getToDayToColleaguesCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekToColleaguesCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthColleaguesCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllToColleaguesCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Исходящие</td>
             <td>{{getToDayOutgoingCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekOutgoingCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthOutgoingCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllToOutgoingCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Входящие</td>
             <td>{{getToDayInboxCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekInboxCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthInboxCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllInboxCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Неотвеченные</td>
             <td>{{getToDayUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllUnansweredCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Длительность</td>
             <td>{{getToDayDurationsCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekDurationsCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthDurationsCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllDurationsCall(workgroup.escortManagerId, workgroup.workgroupId)}}</td>
           </tr>
         </tbody>
       </table>
@@ -123,12 +112,12 @@
         <span>
           <h5>РМ ⟹ {{workgroup.regionalManagerName}}</h5>
         </span><br />
-        <span>
-          Начало работы: {{getStartWorkManager(workgroup.regionalManagerId, workgroup.workgroupId)}}
-        </span><br />
-        <span>
-          Конец работы: {{getEndWorkManager(workgroup.regionalManagerId, workgroup.workgroupId)}}
-        </span>
+               <span>
+                 Начало работы: {{getStartWorkManager(workgroup.regionalManagerId, workgroup.workgroupId)}}
+               </span><br />
+                      <span>
+                        Конец работы: {{getEndWorkManager(workgroup.regionalManagerId, workgroup.workgroupId)}}
+                      </span>
       </div>
       <table>
         <thead>
@@ -137,7 +126,6 @@
             <th>{{btnDate}}</th>
             <th>{{getPeriudWeek()}}</th>
             <th>{{dateCollection}}</th>
-            <th>Всего</th>
           </tr>
         </thead>
         <tbody>
@@ -146,70 +134,60 @@
             <td>{{getToDayAllCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekAllCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthAllCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllAllCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Более 2,5 мин</td>
             <td>{{getToDayMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllMore2and5Call(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Менее 2.5 мин, более 10 сек</td>
             <td>{{getToDaySmaller2and5AndMore10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekSmaller2and5AndMore10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthSmaller2and5AndMore10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllSmaller2and5AndMore10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Менее 10 сек</td>
             <td>{{getToDaySmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekSmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthSmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllSmaller10SCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Звонки развития</td>
             <td>{{getToDayDevelopmentCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekDevelopmentCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthDevelopmentCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllDevelopmentCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Звонки коллегам</td>
             <td>{{getToDayToColleaguesCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekToColleaguesCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthColleaguesCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllToColleaguesCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Исходящие</td>
             <td>{{getToDayOutgoingCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekOutgoingCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthOutgoingCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllToOutgoingCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Входящие</td>
             <td>{{getToDayInboxCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekInboxCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthInboxCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllInboxCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Неотвеченные</td>
             <td>{{getToDayUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllUnansweredCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
           <tr>
             <td style="max-width:100px !important">Длительность</td>
             <td>{{getToDayDurationsCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getWeekDurationsCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
             <td>{{getMonthDurationsCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
-            <td>{{getAllDurationsCall(workgroup.regionalManagerId, workgroup.workgroupId)}}</td>
           </tr>
         </tbody>
       </table>
