--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -35,7 +35,7 @@
 
 
     <mat-paginator [pageSizeOptions]="[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]" showFirstLastButtons></mat-paginator>
-    <mat-table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="status">
         <th colspan="1" mat-header-cell *matHeaderCellDef></th>
@@ -98,6 +98,6 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
-    </mat-table>
+    </table>
   </div>
 </mat-card>
