Добалены лоадеры на страницах звонки и отчетов у контролера; подписаны колонки таблиц в очетах уконтролера;

--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -1,6 +1,16 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Проверка звонков</mat-card-title>
+    <div id="fountainG" [hidden]="hiddenloader">
+      <div id="fountainG_1" class="fountainG"></div>
+      <div id="fountainG_2" class="fountainG"></div>
+      <div id="fountainG_3" class="fountainG"></div>
+      <div id="fountainG_4" class="fountainG"></div>
+      <div id="fountainG_5" class="fountainG"></div>
+      <div id="fountainG_6" class="fountainG"></div>
+      <div id="fountainG_7" class="fountainG"></div>
+      <div id="fountainG_8" class="fountainG"></div>
+    </div>  
   </mat-card-header>
   <div class="filter clearfix">
     <input (keyup)="applyFilterNumberOrname($event.target.value)" placeholder="Телефон или Название">
@@ -44,17 +54,17 @@
 
       <ng-container matColumnDef="statusCall">
         <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
-        <td colspan="4" mat-cell *matCellDef="let element"><span *ngIf="element.contactType != 50"> {{element.contactType == 40 ? "Подтверждён" : "Не подтвержден"}}</span></td>
+        <td colspan="4" mat-cell *matCellDef="let element"><span *ngIf="element.contactType != 50"> {{element.contactType == 40 ? "✓" : "🗙"}}</span></td>
       </ng-container>
 
       <ng-container matColumnDef="direction">
         <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
-        <td colspan="4" mat-cell *matCellDef="let element">{{element.direction}} </td>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.direction == "Входящий" ? "📱←" : element.direction == "Исходящий" ? "📱→" : element.direction}} </td>
       </ng-container>
 
       <ng-container matColumnDef="answer">
         <th colspan="4" mat-header-cell *matHeaderCellDef>Отвечен</th>
-        <td colspan="4" mat-cell *matCellDef="let element">{{element.durations == 0 ? "Нет" : "Да"}} </td>
+        <td colspan="4" mat-cell *matCellDef="let element">{{element.durations == 0 ? "🗙" : "✓"}} </td>
       </ng-container>
 
       <ng-container matColumnDef="title">
