--- a/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.html
@@ -1,6 +1,16 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Проверка Клиента</mat-card-title>
+    <div id="fountainG" hidden>
+      <div id="fountainG_1" class="fountainG"></div>
+      <div id="fountainG_2" class="fountainG"></div>
+      <div id="fountainG_3" class="fountainG"></div>
+      <div id="fountainG_4" class="fountainG"></div>
+      <div id="fountainG_5" class="fountainG"></div>
+      <div id="fountainG_6" class="fountainG"></div>
+      <div id="fountainG_7" class="fountainG"></div>
+      <div id="fountainG_8" class="fountainG"></div>
+    </div>
   </mat-card-header>
   <div class="filter clearfix">
     <select [(ngModel)]="workgroupId" (change)="selectedWorkGroupChange()">
