--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.html
@@ -1,6 +1,16 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Общая статистика звонков</mat-card-title>
+    <div id="fountainG" [hidden]="hiddenloader">
+      <div id="fountainG_1" class="fountainG"></div>
+      <div id="fountainG_2" class="fountainG"></div>
+      <div id="fountainG_3" class="fountainG"></div>
+      <div id="fountainG_4" class="fountainG"></div>
+      <div id="fountainG_5" class="fountainG"></div>
+      <div id="fountainG_6" class="fountainG"></div>
+      <div id="fountainG_7" class="fountainG"></div>
+      <div id="fountainG_8" class="fountainG"></div>
+    </div>
   </mat-card-header>
   <div class="filter clearfix">
     <!--<input (keyup)="applyFilterDuration($event.target.value)" placeholder="Продолжительность">-->
@@ -39,7 +49,13 @@
       <table>
         <thead>
           <tr>
-            <th style="max-width:50px !important"></th>
+            <th style="max-width:50px;border:none;background:#daedfe"></th>
+            <th style="border:none;background:#daedfe">День</th>
+            <th style="border:none;background:#daedfe">Неделя</th>
+            <th style="border:none;background:#daedfe">Месяц</th>
+          </tr>
+          <tr>
+            <th style="max-width:50px"></th>
             <th>{{btnDate}}</th>
             <th>{{getPeriudWeek()}}</th>
             <th>{{dateCollection}}</th>
@@ -121,6 +137,12 @@
       </div>
       <table>
         <thead>
+          <tr>
+            <th style="max-width:50px;border:none;background:#daedfe"></th>
+            <th style="border:none;background:#daedfe">День</th>
+            <th style="border:none;background:#daedfe">Неделя</th>
+            <th style="border:none;background:#daedfe">Месяц</th>
+          </tr>
           <tr>
             <th style="max-width:50px !important"></th>
             <th>{{btnDate}}</th>
