--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
@@ -169,3 +169,152 @@ table
                     border: 2px solid #95CCFF
                     color: #3EA1FF
 
+#fountainG
+  width: 186px
+  height: 22px
+  margin: auto
+  display: flex
+
+.fountainG
+  background-color: rgba(46, 77, 171, 0.71)
+  width: 22px
+  height: 22px
+  animation-name: bounce_fountainG
+  -o-animation-name: bounce_fountainG
+  -ms-animation-name: bounce_fountainG
+  -webkit-animation-name: bounce_fountainG
+  -moz-animation-name: bounce_fountainG
+  animation-duration: 0.905s
+  -o-animation-duration: 0.905s
+  -ms-animation-duration: 0.905s
+  -webkit-animation-duration: 0.905s
+  -moz-animation-duration: 0.905s
+  animation-iteration-count: infinite
+  -o-animation-iteration-count: infinite
+  -ms-animation-iteration-count: infinite
+  -webkit-animation-iteration-count: infinite
+  -moz-animation-iteration-count: infinite
+  animation-direction: normal
+  -o-animation-direction: normal
+  -ms-animation-direction: normal
+  -webkit-animation-direction: normal
+  -moz-animation-direction: normal
+  transform: scale(0.3)
+  -o-transform: scale(0.3)
+  -ms-transform: scale(0.3)
+  -webkit-transform: scale(0.3)
+  -moz-transform: scale(0.3)
+  border-radius: 15px
+  -o-border-radius: 15px
+  -ms-border-radius: 15px
+  -webkit-border-radius: 15px
+  -moz-border-radius: 15px
+
+#fountainG_1
+  left: 0
+  animation-delay: 0.366s
+  -o-animation-delay: 0.366s
+  -ms-animation-delay: 0.366s
+  -webkit-animation-delay: 0.366s
+  -moz-animation-delay: 0.366s
+
+#fountainG_2
+  left: 23px
+  animation-delay: 0.4525s
+  -o-animation-delay: 0.4525s
+  -ms-animation-delay: 0.4525s
+  -webkit-animation-delay: 0.4525s
+  -moz-animation-delay: 0.4525s
+
+#fountainG_3
+  left: 46px
+  animation-delay: 0.549s
+  -o-animation-delay: 0.549s
+  -ms-animation-delay: 0.549s
+  -webkit-animation-delay: 0.549s
+  -moz-animation-delay: 0.549s
+
+#fountainG_4
+  left: 70px
+  animation-delay: 0.6355s
+  -o-animation-delay: 0.6355s
+  -ms-animation-delay: 0.6355s
+  -webkit-animation-delay: 0.6355s
+  -moz-animation-delay: 0.6355s
+
+#fountainG_5
+  left: 93px
+  animation-delay: 0.732s
+  -o-animation-delay: 0.732s
+  -ms-animation-delay: 0.732s
+  -webkit-animation-delay: 0.732s
+  -moz-animation-delay: 0.732s
+
+#fountainG_6
+  left: 116px
+  animation-delay: 0.8185s
+  -o-animation-delay: 0.8185s
+  -ms-animation-delay: 0.8185s
+  -webkit-animation-delay: 0.8185s
+  -moz-animation-delay: 0.8185s
+
+#fountainG_7
+  left: 139px
+  animation-delay: 0.905s
+  -o-animation-delay: 0.905s
+  -ms-animation-delay: 0.905s
+  -webkit-animation-delay: 0.905s
+  -moz-animation-delay: 0.905s
+
+#fountainG_8
+  left: 163px
+  animation-delay: 1.0015s
+  -o-animation-delay: 1.0015s
+  -ms-animation-delay: 1.0015s
+  -webkit-animation-delay: 1.0015s
+  -moz-animation-delay: 1.0015s
+
+@keyframes bounce_fountainG
+  0%
+    transform: scale(1)
+    background-color: rgba(14, 163, 232, 0.65)
+
+  100%
+    transform: scale(0.3)
+    background-color: rgb(145, 125, 209)
+
+@-o-keyframes bounce_fountainG
+  0%
+    -o-transform: scale(1)
+    background-color: rgba(14, 163, 232, 0.65)
+
+  100%
+    -o-transform: scale(0.3)
+    background-color: rgb(145, 125, 209)
+
+@-ms-keyframes bounce_fountainG
+  0%
+    -ms-transform: scale(1)
+    background-color: rgba(14, 163, 232, 0.65)
+
+  100%
+    -ms-transform: scale(0.3)
+    background-color: rgb(145, 125, 209)
+
+@-webkit-keyframes bounce_fountainG
+  0%
+    -webkit-transform: scale(1)
+    background-color: rgba(14, 163, 232, 0.65)
+
+  100%
+    -webkit-transform: scale(0.3)
+    background-color: rgb(145, 125, 209)
+
+@-moz-keyframes bounce_fountainG
+  0%
+    -moz-transform: scale(1)
+    background-color: rgba(14, 163, 232, 0.65)
+
+  100%
+    -moz-transform: scale(0.3)
+    background-color: rgb(145, 125, 209)
